// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rubyAlign renders 0 1`] = `
Array [
  .c0 {
  ruby-align: 0;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-align: 0;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-align: 0;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-align: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`rubyAlign renders function 1`] = `
Array [
  .c0 {
  ruby-align: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-align: has;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-align: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-align: has;
}

<div
    className="c0"
  />,
]
`;

exports[`rubyAlign renders invalid theme path 1`] = `
Array [
  .c0 {
  ruby-align: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-align: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-align: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-align: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`rubyAlign renders negative number 1`] = `
Array [
  .c0 {
  ruby-align: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-align: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-align: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-align: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`rubyAlign renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    ruby-align: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-align: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-align: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    ruby-align: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    ruby-align: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-align: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-align: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    ruby-align: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    ruby-align: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-align: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-align: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    ruby-align: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    ruby-align: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-align: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-align: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    ruby-align: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`rubyAlign renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    ruby-align: July;
  }
}

@media April {
  .c0 {
    ruby-align: August;
  }
}

@media January {
  .c0 {
    ruby-align: September;
  }
}

@media April {
  .c0 {
    ruby-align: November;
  }
}

@media June {
  .c0 {
    ruby-align: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    ruby-align: July;
  }
}

@media April {
  .c0 {
    ruby-align: August;
  }
}

@media January {
  .c0 {
    ruby-align: September;
  }
}

@media April {
  .c0 {
    ruby-align: November;
  }
}

@media June {
  .c0 {
    ruby-align: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    ruby-align: January;
  }
}

@media April {
  .c0 {
    ruby-align: December;
  }
}

@media January {
  .c0 {
    ruby-align: April;
  }
}

@media April {
  .c0 {
    ruby-align: May;
  }
}

@media June {
  .c0 {
    ruby-align: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    ruby-align: January;
  }
}

@media April {
  .c0 {
    ruby-align: December;
  }
}

@media January {
  .c0 {
    ruby-align: April;
  }
}

@media April {
  .c0 {
    ruby-align: May;
  }
}

@media June {
  .c0 {
    ruby-align: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`rubyAlign renders postitive number 1`] = `
Array [
  .c0 {
  ruby-align: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-align: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-align: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-align: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`rubyAlign renders string 1`] = `
Array [
  .c0 {
  ruby-align: July;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-align: July;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-align: June;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-align: June;
}

<div
    className="c0"
  />,
]
`;

exports[`rubyAlign renders valid theme path 1`] = `
Array [
  .c0 {
  ruby-align: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-align: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-align: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-align: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
